--- a/ChatApp.Cli/ChatApp.Cli.csproj
+++ b/ChatApp.Cli/ChatApp.Cli.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.0-preview6.19304.6" />
   </ItemGroup>
 
