--- a/ChatApp/ChatApp.csproj
+++ b/ChatApp/ChatApp.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="linq2db.SQLite.MS" Version="2.7.4" />
+    <PackageReference Include="linq2db.Tools" Version="2.7.4" />
+  </ItemGroup>
 
 </Project>
